name:                repl
version:             0.8
synopsis:            IRC friendly REPL library.
description:         IRC friendly REPL library. Similar to mueval, but
                     implemented as a server using the GHC API, making it
                     much faster than mueval.
license:             MIT
license-file:        LICENSE
author:              Mike Ledger
maintainer:          eleventynine@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Repl
  build-depends:       base == 4.6.*, ghc == 7.6.*, ghc-paths >= 0.1, dlist
